// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypeEditor (Basics) .node() matches snapschot 1`] = `
"{
  \\"kind\\": \\"InterfaceTypeDefinition\\",
  \\"name\\": {
    \\"kind\\": \\"Name\\",
    \\"value\\": \\"BasicNode\\",
    \\"loc\\": {
      \\"start\\": 13,
      \\"end\\": 22
    }
  },
  \\"directives\\": [],
  \\"fields\\": [
    {
      \\"kind\\": \\"FieldDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"id\\",
        \\"loc\\": {
          \\"start\\": 29,
          \\"end\\": 31
        }
      },
      \\"arguments\\": [],
      \\"type\\": {
        \\"kind\\": \\"NonNullType\\",
        \\"type\\": {
          \\"kind\\": \\"NamedType\\",
          \\"name\\": {
            \\"kind\\": \\"Name\\",
            \\"value\\": \\"ID\\",
            \\"loc\\": {
              \\"start\\": 33,
              \\"end\\": 35
            }
          },
          \\"loc\\": {
            \\"start\\": 33,
            \\"end\\": 35
          }
        },
        \\"loc\\": {
          \\"start\\": 33,
          \\"end\\": 36
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 29,
        \\"end\\": 36
      }
    },
    {
      \\"kind\\": \\"FieldDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"createdAt\\",
        \\"loc\\": {
          \\"start\\": 41,
          \\"end\\": 50
        }
      },
      \\"arguments\\": [],
      \\"type\\": {
        \\"kind\\": \\"NonNullType\\",
        \\"type\\": {
          \\"kind\\": \\"NamedType\\",
          \\"name\\": {
            \\"kind\\": \\"Name\\",
            \\"value\\": \\"DateTime\\",
            \\"loc\\": {
              \\"start\\": 52,
              \\"end\\": 60
            }
          },
          \\"loc\\": {
            \\"start\\": 52,
            \\"end\\": 60
          }
        },
        \\"loc\\": {
          \\"start\\": 52,
          \\"end\\": 61
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 41,
        \\"end\\": 61
      }
    },
    {
      \\"kind\\": \\"FieldDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"deletedAt\\",
        \\"loc\\": {
          \\"start\\": 66,
          \\"end\\": 75
        }
      },
      \\"arguments\\": [],
      \\"type\\": {
        \\"kind\\": \\"NamedType\\",
        \\"name\\": {
          \\"kind\\": \\"Name\\",
          \\"value\\": \\"DateTime\\",
          \\"loc\\": {
            \\"start\\": 77,
            \\"end\\": 85
          }
        },
        \\"loc\\": {
          \\"start\\": 77,
          \\"end\\": 85
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 66,
        \\"end\\": 85
      }
    }
  ],
  \\"loc\\": {
    \\"start\\": 3,
    \\"end\\": 89
  }
}"
`;

exports[`TypeEditor (Basics) .print() matches snapshot 1`] = `
"interface BasicNode {
  id: ID!
  createdAt: DateTime!
  deletedAt: DateTime
}"
`;

exports[`TypeEditor (SupportedDefinitionNode) parse & print & returns node snapshot of EnumTypeDefinition 1`] = `
"{
  \\"kind\\": \\"EnumTypeDefinition\\",
  \\"name\\": {
    \\"kind\\": \\"Name\\",
    \\"value\\": \\"OrderBy\\",
    \\"loc\\": {
      \\"start\\": 5,
      \\"end\\": 12
    }
  },
  \\"directives\\": [],
  \\"values\\": [
    {
      \\"kind\\": \\"EnumValueDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"name\\",
        \\"loc\\": {
          \\"start\\": 17,
          \\"end\\": 21
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 17,
        \\"end\\": 21
      }
    },
    {
      \\"kind\\": \\"EnumValueDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"age\\",
        \\"loc\\": {
          \\"start\\": 24,
          \\"end\\": 27
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 24,
        \\"end\\": 27
      }
    },
    {
      \\"kind\\": \\"EnumValueDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"last_login\\",
        \\"loc\\": {
          \\"start\\": 30,
          \\"end\\": 40
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 30,
        \\"end\\": 40
      }
    }
  ],
  \\"loc\\": {
    \\"start\\": 0,
    \\"end\\": 42
  }
}"
`;

exports[`TypeEditor (SupportedDefinitionNode) parse & print & returns node snapshot of EnumTypeExtension 1`] = `
"{
  \\"kind\\": \\"EnumTypeExtension\\",
  \\"name\\": {
    \\"kind\\": \\"Name\\",
    \\"value\\": \\"OrderBy\\",
    \\"loc\\": {
      \\"start\\": 12,
      \\"end\\": 19
    }
  },
  \\"directives\\": [],
  \\"values\\": [
    {
      \\"kind\\": \\"EnumValueDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"name\\",
        \\"loc\\": {
          \\"start\\": 24,
          \\"end\\": 28
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 24,
        \\"end\\": 28
      }
    },
    {
      \\"kind\\": \\"EnumValueDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"age\\",
        \\"loc\\": {
          \\"start\\": 31,
          \\"end\\": 34
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 31,
        \\"end\\": 34
      }
    },
    {
      \\"kind\\": \\"EnumValueDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"last_login\\",
        \\"loc\\": {
          \\"start\\": 37,
          \\"end\\": 47
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 37,
        \\"end\\": 47
      }
    }
  ],
  \\"loc\\": {
    \\"start\\": 0,
    \\"end\\": 49
  }
}"
`;

exports[`TypeEditor (SupportedDefinitionNode) parse, print & returns node snapshot of DirectiveDefinition 1`] = `
"{
  \\"kind\\": \\"DirectiveDefinition\\",
  \\"name\\": {
    \\"kind\\": \\"Name\\",
    \\"value\\": \\"deprecated\\",
    \\"loc\\": {
      \\"start\\": 11,
      \\"end\\": 21
    }
  },
  \\"arguments\\": [
    {
      \\"kind\\": \\"InputValueDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"reason\\",
        \\"loc\\": {
          \\"start\\": 25,
          \\"end\\": 31
        }
      },
      \\"type\\": {
        \\"kind\\": \\"NamedType\\",
        \\"name\\": {
          \\"kind\\": \\"Name\\",
          \\"value\\": \\"String\\",
          \\"loc\\": {
            \\"start\\": 33,
            \\"end\\": 39
          }
        },
        \\"loc\\": {
          \\"start\\": 33,
          \\"end\\": 39
        }
      },
      \\"defaultValue\\": {
        \\"kind\\": \\"StringValue\\",
        \\"value\\": \\"No longer supported\\",
        \\"block\\": false,
        \\"loc\\": {
          \\"start\\": 42,
          \\"end\\": 63
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 25,
        \\"end\\": 63
      }
    }
  ],
  \\"locations\\": [
    {
      \\"kind\\": \\"Name\\",
      \\"value\\": \\"FIELD_DEFINITION\\",
      \\"loc\\": {
        \\"start\\": 69,
        \\"end\\": 85
      }
    },
    {
      \\"kind\\": \\"Name\\",
      \\"value\\": \\"ENUM_VALUE\\",
      \\"loc\\": {
        \\"start\\": 88,
        \\"end\\": 98
      }
    }
  ],
  \\"loc\\": {
    \\"start\\": 0,
    \\"end\\": 98
  }
}"
`;

exports[`TypeEditor (SupportedDefinitionNode) parse, print & returns node snapshot of InputObjectTypeDefinition 1`] = `
"{
  \\"kind\\": \\"InputObjectTypeDefinition\\",
  \\"name\\": {
    \\"kind\\": \\"Name\\",
    \\"value\\": \\"CreateTweetInput\\",
    \\"loc\\": {
      \\"start\\": 6,
      \\"end\\": 22
    }
  },
  \\"directives\\": [],
  \\"fields\\": [
    {
      \\"kind\\": \\"InputValueDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"body\\",
        \\"loc\\": {
          \\"start\\": 27,
          \\"end\\": 31
        }
      },
      \\"type\\": {
        \\"kind\\": \\"NamedType\\",
        \\"name\\": {
          \\"kind\\": \\"Name\\",
          \\"value\\": \\"String\\",
          \\"loc\\": {
            \\"start\\": 33,
            \\"end\\": 39
          }
        },
        \\"loc\\": {
          \\"start\\": 33,
          \\"end\\": 39
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 27,
        \\"end\\": 39
      }
    },
    {
      \\"kind\\": \\"InputValueDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"tags\\",
        \\"loc\\": {
          \\"start\\": 42,
          \\"end\\": 46
        }
      },
      \\"type\\": {
        \\"kind\\": \\"NonNullType\\",
        \\"type\\": {
          \\"kind\\": \\"ListType\\",
          \\"type\\": {
            \\"kind\\": \\"NamedType\\",
            \\"name\\": {
              \\"kind\\": \\"Name\\",
              \\"value\\": \\"String\\",
              \\"loc\\": {
                \\"start\\": 49,
                \\"end\\": 55
              }
            },
            \\"loc\\": {
              \\"start\\": 49,
              \\"end\\": 55
            }
          },
          \\"loc\\": {
            \\"start\\": 48,
            \\"end\\": 56
          }
        },
        \\"loc\\": {
          \\"start\\": 48,
          \\"end\\": 57
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 42,
        \\"end\\": 57
      }
    }
  ],
  \\"loc\\": {
    \\"start\\": 0,
    \\"end\\": 59
  }
}"
`;

exports[`TypeEditor (SupportedDefinitionNode) parse, print & returns node snapshot of InputObjectTypeExtension 1`] = `
"{
  \\"kind\\": \\"InputObjectTypeExtension\\",
  \\"name\\": {
    \\"kind\\": \\"Name\\",
    \\"value\\": \\"CreateTweetInput\\",
    \\"loc\\": {
      \\"start\\": 13,
      \\"end\\": 29
    }
  },
  \\"directives\\": [],
  \\"fields\\": [
    {
      \\"kind\\": \\"InputValueDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"body\\",
        \\"loc\\": {
          \\"start\\": 34,
          \\"end\\": 38
        }
      },
      \\"type\\": {
        \\"kind\\": \\"NamedType\\",
        \\"name\\": {
          \\"kind\\": \\"Name\\",
          \\"value\\": \\"String\\",
          \\"loc\\": {
            \\"start\\": 40,
            \\"end\\": 46
          }
        },
        \\"loc\\": {
          \\"start\\": 40,
          \\"end\\": 46
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 34,
        \\"end\\": 46
      }
    },
    {
      \\"kind\\": \\"InputValueDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"tags\\",
        \\"loc\\": {
          \\"start\\": 49,
          \\"end\\": 53
        }
      },
      \\"type\\": {
        \\"kind\\": \\"NonNullType\\",
        \\"type\\": {
          \\"kind\\": \\"ListType\\",
          \\"type\\": {
            \\"kind\\": \\"NamedType\\",
            \\"name\\": {
              \\"kind\\": \\"Name\\",
              \\"value\\": \\"String\\",
              \\"loc\\": {
                \\"start\\": 56,
                \\"end\\": 62
              }
            },
            \\"loc\\": {
              \\"start\\": 56,
              \\"end\\": 62
            }
          },
          \\"loc\\": {
            \\"start\\": 55,
            \\"end\\": 63
          }
        },
        \\"loc\\": {
          \\"start\\": 55,
          \\"end\\": 64
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 49,
        \\"end\\": 64
      }
    }
  ],
  \\"loc\\": {
    \\"start\\": 0,
    \\"end\\": 66
  }
}"
`;

exports[`TypeEditor (SupportedDefinitionNode) parse, print & returns node snapshot of InterfaceTypeDefinition 1`] = `
"{
  \\"kind\\": \\"InterfaceTypeDefinition\\",
  \\"name\\": {
    \\"kind\\": \\"Name\\",
    \\"value\\": \\"BasicNode\\",
    \\"loc\\": {
      \\"start\\": 10,
      \\"end\\": 19
    }
  },
  \\"directives\\": [],
  \\"fields\\": [
    {
      \\"kind\\": \\"FieldDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"id\\",
        \\"loc\\": {
          \\"start\\": 24,
          \\"end\\": 26
        }
      },
      \\"arguments\\": [],
      \\"type\\": {
        \\"kind\\": \\"NonNullType\\",
        \\"type\\": {
          \\"kind\\": \\"NamedType\\",
          \\"name\\": {
            \\"kind\\": \\"Name\\",
            \\"value\\": \\"ID\\",
            \\"loc\\": {
              \\"start\\": 28,
              \\"end\\": 30
            }
          },
          \\"loc\\": {
            \\"start\\": 28,
            \\"end\\": 30
          }
        },
        \\"loc\\": {
          \\"start\\": 28,
          \\"end\\": 31
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 24,
        \\"end\\": 31
      }
    },
    {
      \\"kind\\": \\"FieldDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"createdAt\\",
        \\"loc\\": {
          \\"start\\": 34,
          \\"end\\": 43
        }
      },
      \\"arguments\\": [],
      \\"type\\": {
        \\"kind\\": \\"NonNullType\\",
        \\"type\\": {
          \\"kind\\": \\"NamedType\\",
          \\"name\\": {
            \\"kind\\": \\"Name\\",
            \\"value\\": \\"DateTime\\",
            \\"loc\\": {
              \\"start\\": 45,
              \\"end\\": 53
            }
          },
          \\"loc\\": {
            \\"start\\": 45,
            \\"end\\": 53
          }
        },
        \\"loc\\": {
          \\"start\\": 45,
          \\"end\\": 54
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 34,
        \\"end\\": 54
      }
    },
    {
      \\"kind\\": \\"FieldDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"deletedAt\\",
        \\"loc\\": {
          \\"start\\": 57,
          \\"end\\": 66
        }
      },
      \\"arguments\\": [],
      \\"type\\": {
        \\"kind\\": \\"NamedType\\",
        \\"name\\": {
          \\"kind\\": \\"Name\\",
          \\"value\\": \\"DateTime\\",
          \\"loc\\": {
            \\"start\\": 68,
            \\"end\\": 76
          }
        },
        \\"loc\\": {
          \\"start\\": 68,
          \\"end\\": 76
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 57,
        \\"end\\": 76
      }
    }
  ],
  \\"loc\\": {
    \\"start\\": 0,
    \\"end\\": 78
  }
}"
`;

exports[`TypeEditor (SupportedDefinitionNode) parse, print & returns node snapshot of InterfaceTypeExtension 1`] = `
"{
  \\"kind\\": \\"InterfaceTypeExtension\\",
  \\"name\\": {
    \\"kind\\": \\"Name\\",
    \\"value\\": \\"BasicNode\\",
    \\"loc\\": {
      \\"start\\": 17,
      \\"end\\": 26
    }
  },
  \\"directives\\": [],
  \\"fields\\": [
    {
      \\"kind\\": \\"FieldDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"id\\",
        \\"loc\\": {
          \\"start\\": 31,
          \\"end\\": 33
        }
      },
      \\"arguments\\": [],
      \\"type\\": {
        \\"kind\\": \\"NonNullType\\",
        \\"type\\": {
          \\"kind\\": \\"NamedType\\",
          \\"name\\": {
            \\"kind\\": \\"Name\\",
            \\"value\\": \\"ID\\",
            \\"loc\\": {
              \\"start\\": 35,
              \\"end\\": 37
            }
          },
          \\"loc\\": {
            \\"start\\": 35,
            \\"end\\": 37
          }
        },
        \\"loc\\": {
          \\"start\\": 35,
          \\"end\\": 38
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 31,
        \\"end\\": 38
      }
    },
    {
      \\"kind\\": \\"FieldDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"createdAt\\",
        \\"loc\\": {
          \\"start\\": 41,
          \\"end\\": 50
        }
      },
      \\"arguments\\": [],
      \\"type\\": {
        \\"kind\\": \\"NonNullType\\",
        \\"type\\": {
          \\"kind\\": \\"NamedType\\",
          \\"name\\": {
            \\"kind\\": \\"Name\\",
            \\"value\\": \\"DateTime\\",
            \\"loc\\": {
              \\"start\\": 52,
              \\"end\\": 60
            }
          },
          \\"loc\\": {
            \\"start\\": 52,
            \\"end\\": 60
          }
        },
        \\"loc\\": {
          \\"start\\": 52,
          \\"end\\": 61
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 41,
        \\"end\\": 61
      }
    },
    {
      \\"kind\\": \\"FieldDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"deletedAt\\",
        \\"loc\\": {
          \\"start\\": 64,
          \\"end\\": 73
        }
      },
      \\"arguments\\": [],
      \\"type\\": {
        \\"kind\\": \\"NamedType\\",
        \\"name\\": {
          \\"kind\\": \\"Name\\",
          \\"value\\": \\"DateTime\\",
          \\"loc\\": {
            \\"start\\": 75,
            \\"end\\": 83
          }
        },
        \\"loc\\": {
          \\"start\\": 75,
          \\"end\\": 83
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 64,
        \\"end\\": 83
      }
    }
  ],
  \\"loc\\": {
    \\"start\\": 0,
    \\"end\\": 85
  }
}"
`;

exports[`TypeEditor (SupportedDefinitionNode) parse, print & returns node snapshot of ObjectTypeDefinition 1`] = `
"{
  \\"kind\\": \\"ObjectTypeDefinition\\",
  \\"name\\": {
    \\"kind\\": \\"Name\\",
    \\"value\\": \\"Query\\",
    \\"loc\\": {
      \\"start\\": 5,
      \\"end\\": 10
    }
  },
  \\"interfaces\\": [],
  \\"directives\\": [],
  \\"fields\\": [
    {
      \\"kind\\": \\"FieldDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"Tweet\\",
        \\"loc\\": {
          \\"start\\": 15,
          \\"end\\": 20
        }
      },
      \\"arguments\\": [
        {
          \\"kind\\": \\"InputValueDefinition\\",
          \\"name\\": {
            \\"kind\\": \\"Name\\",
            \\"value\\": \\"id\\",
            \\"loc\\": {
              \\"start\\": 21,
              \\"end\\": 23
            }
          },
          \\"type\\": {
            \\"kind\\": \\"NonNullType\\",
            \\"type\\": {
              \\"kind\\": \\"NamedType\\",
              \\"name\\": {
                \\"kind\\": \\"Name\\",
                \\"value\\": \\"ID\\",
                \\"loc\\": {
                  \\"start\\": 25,
                  \\"end\\": 27
                }
              },
              \\"loc\\": {
                \\"start\\": 25,
                \\"end\\": 27
              }
            },
            \\"loc\\": {
              \\"start\\": 25,
              \\"end\\": 28
            }
          },
          \\"directives\\": [],
          \\"loc\\": {
            \\"start\\": 21,
            \\"end\\": 28
          }
        }
      ],
      \\"type\\": {
        \\"kind\\": \\"NamedType\\",
        \\"name\\": {
          \\"kind\\": \\"Name\\",
          \\"value\\": \\"Tweet\\",
          \\"loc\\": {
            \\"start\\": 31,
            \\"end\\": 36
          }
        },
        \\"loc\\": {
          \\"start\\": 31,
          \\"end\\": 36
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 15,
        \\"end\\": 36
      }
    },
    {
      \\"kind\\": \\"FieldDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"Tweets\\",
        \\"loc\\": {
          \\"start\\": 39,
          \\"end\\": 45
        }
      },
      \\"arguments\\": [
        {
          \\"kind\\": \\"InputValueDefinition\\",
          \\"name\\": {
            \\"kind\\": \\"Name\\",
            \\"value\\": \\"limit\\",
            \\"loc\\": {
              \\"start\\": 46,
              \\"end\\": 51
            }
          },
          \\"type\\": {
            \\"kind\\": \\"NamedType\\",
            \\"name\\": {
              \\"kind\\": \\"Name\\",
              \\"value\\": \\"Int\\",
              \\"loc\\": {
                \\"start\\": 53,
                \\"end\\": 56
              }
            },
            \\"loc\\": {
              \\"start\\": 53,
              \\"end\\": 56
            }
          },
          \\"directives\\": [],
          \\"loc\\": {
            \\"start\\": 46,
            \\"end\\": 56
          }
        },
        {
          \\"kind\\": \\"InputValueDefinition\\",
          \\"name\\": {
            \\"kind\\": \\"Name\\",
            \\"value\\": \\"skip\\",
            \\"loc\\": {
              \\"start\\": 58,
              \\"end\\": 62
            }
          },
          \\"type\\": {
            \\"kind\\": \\"NamedType\\",
            \\"name\\": {
              \\"kind\\": \\"Name\\",
              \\"value\\": \\"Int\\",
              \\"loc\\": {
                \\"start\\": 64,
                \\"end\\": 67
              }
            },
            \\"loc\\": {
              \\"start\\": 64,
              \\"end\\": 67
            }
          },
          \\"directives\\": [],
          \\"loc\\": {
            \\"start\\": 58,
            \\"end\\": 67
          }
        },
        {
          \\"kind\\": \\"InputValueDefinition\\",
          \\"name\\": {
            \\"kind\\": \\"Name\\",
            \\"value\\": \\"sort_field\\",
            \\"loc\\": {
              \\"start\\": 69,
              \\"end\\": 79
            }
          },
          \\"type\\": {
            \\"kind\\": \\"NamedType\\",
            \\"name\\": {
              \\"kind\\": \\"Name\\",
              \\"value\\": \\"String\\",
              \\"loc\\": {
                \\"start\\": 81,
                \\"end\\": 87
              }
            },
            \\"loc\\": {
              \\"start\\": 81,
              \\"end\\": 87
            }
          },
          \\"directives\\": [],
          \\"loc\\": {
            \\"start\\": 69,
            \\"end\\": 87
          }
        },
        {
          \\"kind\\": \\"InputValueDefinition\\",
          \\"name\\": {
            \\"kind\\": \\"Name\\",
            \\"value\\": \\"sort_order\\",
            \\"loc\\": {
              \\"start\\": 89,
              \\"end\\": 99
            }
          },
          \\"type\\": {
            \\"kind\\": \\"NamedType\\",
            \\"name\\": {
              \\"kind\\": \\"Name\\",
              \\"value\\": \\"String\\",
              \\"loc\\": {
                \\"start\\": 101,
                \\"end\\": 107
              }
            },
            \\"loc\\": {
              \\"start\\": 101,
              \\"end\\": 107
            }
          },
          \\"directives\\": [],
          \\"loc\\": {
            \\"start\\": 89,
            \\"end\\": 107
          }
        }
      ],
      \\"type\\": {
        \\"kind\\": \\"ListType\\",
        \\"type\\": {
          \\"kind\\": \\"NamedType\\",
          \\"name\\": {
            \\"kind\\": \\"Name\\",
            \\"value\\": \\"Tweet\\",
            \\"loc\\": {
              \\"start\\": 111,
              \\"end\\": 116
            }
          },
          \\"loc\\": {
            \\"start\\": 111,
            \\"end\\": 116
          }
        },
        \\"loc\\": {
          \\"start\\": 110,
          \\"end\\": 117
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 39,
        \\"end\\": 117
      }
    }
  ],
  \\"loc\\": {
    \\"start\\": 0,
    \\"end\\": 119
  }
}"
`;

exports[`TypeEditor (SupportedDefinitionNode) parse, print & returns node snapshot of ObjectTypeExtension 1`] = `
"{
  \\"kind\\": \\"ObjectTypeExtension\\",
  \\"name\\": {
    \\"kind\\": \\"Name\\",
    \\"value\\": \\"Query\\",
    \\"loc\\": {
      \\"start\\": 12,
      \\"end\\": 17
    }
  },
  \\"interfaces\\": [],
  \\"directives\\": [],
  \\"fields\\": [
    {
      \\"kind\\": \\"FieldDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"Tweet\\",
        \\"loc\\": {
          \\"start\\": 22,
          \\"end\\": 27
        }
      },
      \\"arguments\\": [
        {
          \\"kind\\": \\"InputValueDefinition\\",
          \\"name\\": {
            \\"kind\\": \\"Name\\",
            \\"value\\": \\"id\\",
            \\"loc\\": {
              \\"start\\": 28,
              \\"end\\": 30
            }
          },
          \\"type\\": {
            \\"kind\\": \\"NonNullType\\",
            \\"type\\": {
              \\"kind\\": \\"NamedType\\",
              \\"name\\": {
                \\"kind\\": \\"Name\\",
                \\"value\\": \\"ID\\",
                \\"loc\\": {
                  \\"start\\": 32,
                  \\"end\\": 34
                }
              },
              \\"loc\\": {
                \\"start\\": 32,
                \\"end\\": 34
              }
            },
            \\"loc\\": {
              \\"start\\": 32,
              \\"end\\": 35
            }
          },
          \\"directives\\": [],
          \\"loc\\": {
            \\"start\\": 28,
            \\"end\\": 35
          }
        }
      ],
      \\"type\\": {
        \\"kind\\": \\"NamedType\\",
        \\"name\\": {
          \\"kind\\": \\"Name\\",
          \\"value\\": \\"Tweet\\",
          \\"loc\\": {
            \\"start\\": 38,
            \\"end\\": 43
          }
        },
        \\"loc\\": {
          \\"start\\": 38,
          \\"end\\": 43
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 22,
        \\"end\\": 43
      }
    },
    {
      \\"kind\\": \\"FieldDefinition\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"Tweets\\",
        \\"loc\\": {
          \\"start\\": 46,
          \\"end\\": 52
        }
      },
      \\"arguments\\": [
        {
          \\"kind\\": \\"InputValueDefinition\\",
          \\"name\\": {
            \\"kind\\": \\"Name\\",
            \\"value\\": \\"limit\\",
            \\"loc\\": {
              \\"start\\": 53,
              \\"end\\": 58
            }
          },
          \\"type\\": {
            \\"kind\\": \\"NamedType\\",
            \\"name\\": {
              \\"kind\\": \\"Name\\",
              \\"value\\": \\"Int\\",
              \\"loc\\": {
                \\"start\\": 60,
                \\"end\\": 63
              }
            },
            \\"loc\\": {
              \\"start\\": 60,
              \\"end\\": 63
            }
          },
          \\"directives\\": [],
          \\"loc\\": {
            \\"start\\": 53,
            \\"end\\": 63
          }
        },
        {
          \\"kind\\": \\"InputValueDefinition\\",
          \\"name\\": {
            \\"kind\\": \\"Name\\",
            \\"value\\": \\"skip\\",
            \\"loc\\": {
              \\"start\\": 65,
              \\"end\\": 69
            }
          },
          \\"type\\": {
            \\"kind\\": \\"NamedType\\",
            \\"name\\": {
              \\"kind\\": \\"Name\\",
              \\"value\\": \\"Int\\",
              \\"loc\\": {
                \\"start\\": 71,
                \\"end\\": 74
              }
            },
            \\"loc\\": {
              \\"start\\": 71,
              \\"end\\": 74
            }
          },
          \\"directives\\": [],
          \\"loc\\": {
            \\"start\\": 65,
            \\"end\\": 74
          }
        },
        {
          \\"kind\\": \\"InputValueDefinition\\",
          \\"name\\": {
            \\"kind\\": \\"Name\\",
            \\"value\\": \\"sort_field\\",
            \\"loc\\": {
              \\"start\\": 76,
              \\"end\\": 86
            }
          },
          \\"type\\": {
            \\"kind\\": \\"NamedType\\",
            \\"name\\": {
              \\"kind\\": \\"Name\\",
              \\"value\\": \\"String\\",
              \\"loc\\": {
                \\"start\\": 88,
                \\"end\\": 94
              }
            },
            \\"loc\\": {
              \\"start\\": 88,
              \\"end\\": 94
            }
          },
          \\"directives\\": [],
          \\"loc\\": {
            \\"start\\": 76,
            \\"end\\": 94
          }
        },
        {
          \\"kind\\": \\"InputValueDefinition\\",
          \\"name\\": {
            \\"kind\\": \\"Name\\",
            \\"value\\": \\"sort_order\\",
            \\"loc\\": {
              \\"start\\": 96,
              \\"end\\": 106
            }
          },
          \\"type\\": {
            \\"kind\\": \\"NamedType\\",
            \\"name\\": {
              \\"kind\\": \\"Name\\",
              \\"value\\": \\"String\\",
              \\"loc\\": {
                \\"start\\": 108,
                \\"end\\": 114
              }
            },
            \\"loc\\": {
              \\"start\\": 108,
              \\"end\\": 114
            }
          },
          \\"directives\\": [],
          \\"loc\\": {
            \\"start\\": 96,
            \\"end\\": 114
          }
        }
      ],
      \\"type\\": {
        \\"kind\\": \\"ListType\\",
        \\"type\\": {
          \\"kind\\": \\"NamedType\\",
          \\"name\\": {
            \\"kind\\": \\"Name\\",
            \\"value\\": \\"Tweet\\",
            \\"loc\\": {
              \\"start\\": 118,
              \\"end\\": 123
            }
          },
          \\"loc\\": {
            \\"start\\": 118,
            \\"end\\": 123
          }
        },
        \\"loc\\": {
          \\"start\\": 117,
          \\"end\\": 124
        }
      },
      \\"directives\\": [],
      \\"loc\\": {
        \\"start\\": 46,
        \\"end\\": 124
      }
    }
  ],
  \\"loc\\": {
    \\"start\\": 0,
    \\"end\\": 126
  }
}"
`;

exports[`TypeEditor (SupportedDefinitionNode) parse, print & returns node snapshot of ScalarTypeDefinition 1`] = `
"{
  \\"kind\\": \\"ScalarTypeDefinition\\",
  \\"name\\": {
    \\"kind\\": \\"Name\\",
    \\"value\\": \\"Date\\",
    \\"loc\\": {
      \\"start\\": 7,
      \\"end\\": 11
    }
  },
  \\"directives\\": [],
  \\"loc\\": {
    \\"start\\": 0,
    \\"end\\": 11
  }
}"
`;

exports[`TypeEditor (SupportedDefinitionNode) parse, print & returns node snapshot of ScalarTypeExtension 1`] = `
"{
  \\"kind\\": \\"ScalarTypeExtension\\",
  \\"name\\": {
    \\"kind\\": \\"Name\\",
    \\"value\\": \\"Date\\",
    \\"loc\\": {
      \\"start\\": 14,
      \\"end\\": 18
    }
  },
  \\"directives\\": [
    {
      \\"kind\\": \\"Directive\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"some_directive\\",
        \\"loc\\": {
          \\"start\\": 20,
          \\"end\\": 34
        }
      },
      \\"arguments\\": [],
      \\"loc\\": {
        \\"start\\": 19,
        \\"end\\": 34
      }
    }
  ],
  \\"loc\\": {
    \\"start\\": 0,
    \\"end\\": 34
  }
}"
`;

exports[`TypeEditor (SupportedDefinitionNode) parse, print & returns node snapshot of UnionTypeDefinition 1`] = `
"{
  \\"kind\\": \\"UnionTypeDefinition\\",
  \\"name\\": {
    \\"kind\\": \\"Name\\",
    \\"value\\": \\"Person\\",
    \\"loc\\": {
      \\"start\\": 6,
      \\"end\\": 12
    }
  },
  \\"directives\\": [],
  \\"types\\": [
    {
      \\"kind\\": \\"NamedType\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"User\\",
        \\"loc\\": {
          \\"start\\": 15,
          \\"end\\": 19
        }
      },
      \\"loc\\": {
        \\"start\\": 15,
        \\"end\\": 19
      }
    },
    {
      \\"kind\\": \\"NamedType\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"Candidate\\",
        \\"loc\\": {
          \\"start\\": 22,
          \\"end\\": 31
        }
      },
      \\"loc\\": {
        \\"start\\": 22,
        \\"end\\": 31
      }
    }
  ],
  \\"loc\\": {
    \\"start\\": 0,
    \\"end\\": 31
  }
}"
`;

exports[`TypeEditor (SupportedDefinitionNode) parse, print & returns node snapshot of UnionTypeExtension 1`] = `
"{
  \\"kind\\": \\"UnionTypeExtension\\",
  \\"name\\": {
    \\"kind\\": \\"Name\\",
    \\"value\\": \\"Person\\",
    \\"loc\\": {
      \\"start\\": 13,
      \\"end\\": 19
    }
  },
  \\"directives\\": [],
  \\"types\\": [
    {
      \\"kind\\": \\"NamedType\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"User\\",
        \\"loc\\": {
          \\"start\\": 22,
          \\"end\\": 26
        }
      },
      \\"loc\\": {
        \\"start\\": 22,
        \\"end\\": 26
      }
    },
    {
      \\"kind\\": \\"NamedType\\",
      \\"name\\": {
        \\"kind\\": \\"Name\\",
        \\"value\\": \\"Candidate\\",
        \\"loc\\": {
          \\"start\\": 29,
          \\"end\\": 38
        }
      },
      \\"loc\\": {
        \\"start\\": 29,
        \\"end\\": 38
      }
    }
  ],
  \\"loc\\": {
    \\"start\\": 0,
    \\"end\\": 38
  }
}"
`;
